--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Felicity Jones</title>
+    <title>João Carlos Morais</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Curriculum vitae Felicity Jones" />
-    <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
+    <meta name="description" content="Curriculum vitae João carlos Morais" />
+    <meta name="keywords" content="curriculo, vitae, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -35,7 +35,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Felicity <span>Jones</span></div></a>
+            <a href="index.html#home"><div class="site-title">João Carlos <span>Morais</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -65,7 +65,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Felicity Jones</div>
+          <div class="mobile-site-title">João Carlos Morais</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -88,27 +88,27 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images/felicity.jpeg" alt="Felicity Jones">
+                        <img src="images/Joao Carlos.png" alt="Felicity Jones">
                       </div>
                     </div>
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Felicity Jones</h1>
+                        <h1>João Carlos Morais</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Web Designer</div>
+                            <div class="sp-subtitle">Desenvolvedor Full Stack</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Frontend-developer</div>
+                            <div class="sp-subtitle">Analista de dados (nas horas vagas)</div>
                           </div>
                         </div>
                       </div>
 
                       <div class="social-links">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/jo%C3%A3o-carlos-morais/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/jcmorais-araujo"><i class="fa fa-github"></i></a>
+                        <a href="https://www.instagram.com/joca_morais/"><i class="fa fa-instagram"></i></a>
                       </div>
                     </div>
                   </div>
