Modificacao no QUEM SOU e Informacoes da localidade

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá! Eu sou a Felicity Jones. Gosto de gatos, video games e programação. Aqui você irá encontrar algumas outras
-                        informações sobre mim.</p>
+                        <p>Olá! Eu sou o João! Tenho um filhinho de quatro patas, gosto de ler e de programação. 
+                          Aqui você irá encontrar algumas informações sobre mim.</p>
                       </div>
                       <div class="download-resume">
                         <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
@@ -132,11 +132,11 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value">29</span></li>
+                        <!-- <li><span class="title">Idade</span><span class="value">29</span></li> -->
                         <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
-                        <li><span class="title">Cidade/Estado</span><span class="value">São Paulo, SP</span></li>
-                        <li><span class="title">E-mail</span><span class="value">felicity@geekuniversity.com.br</span></li>
-                        <li><span class="title">Fone</span><span class="value">+5511 123 456 789</span></li>
+                        <li><span class="title">Cidade/Estado</span><span class="value">Recife, PE</span></li>
+                        <li><span class="title">E-mail</span><span class="value">jcmorais.araujo@gmail.com</span></li>
+                        <li><span class="title">Fone</span><span class="value">(81) 99627-2137</span></li>
                         <li><span class="title">Freelance</span><span class="value available">Disponível</span></li>
                       </ul>
                     </div>
