--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                             <div class="sp-subtitle">Desenvolvedor Full Stack</div>
                           </div>
                           <div class="item">
+                            <div class="sp-subtitle">Geólogo, MSc</div>
+                          </div>
+                          <div class="item">
                             <div class="sp-subtitle">Analista de dados (nas horas vagas)</div>
                           </div>
                         </div>
