Inicio da modificacao do curriculo

--- a/index.html
+++ b/index.html
@@ -168,18 +168,18 @@
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
+                            <h4 class="item-title">Análise e Desenvolvimento de Sistemas</h4>
+                            <span class="item-period">2023</span>
+                            <span class="item-small">Centro Universitário UniFBV</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
+                            <h4 class="item-title">Pós-Graduação em Geociências</h4>
+                            <span class="item-period">2021</span>
+                            <span class="item-small">Universidade Federal de Pernambuco</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
                           <!-- / Education 2 -->
