Modificando a parte de educacao

--- a/index.html
+++ b/index.html
@@ -177,21 +177,30 @@
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Pós-Graduação em Geociências</h4>
+                            <h4 class="item-title">Desenvolvedor Full Stack</h4>
                             <span class="item-period">2021</span>
-                            <span class="item-small">Universidade Federal de Pernambuco</span>
+                            <span class="item-small">Gama Academy</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
                           <!-- / Education 2 -->
 
                           <!-- Education 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
+                            <h4 class="item-title">Pós-Graduação em Geociências</h4>
+                            <span class="item-period">2021</span>
+                            <span class="item-small">Universidade Federal de Pernambuco</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
                           <!-- / Education 3 -->
+
+                          <!-- Education 4 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Geologia</h4>
+                            <span class="item-period">2018</span>
+                            <span class="item-small">Apple Inc.</span>
+                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                          </div>
+                          <!-- / Education 4 -->
                         </div>
                       </div>
                     </div>
