adicionei o caminho para download de meu curriculo no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                           Aqui você irá encontrar algumas informações sobre mim.</p>
                       </div>
                       <div class="download-resume">
-                        <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                        <a href="cv/João Carlos Morais - Currículo.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
                       </div>
                     </div>
 
