--- a/index.html
+++ b/index.html
@@ -215,29 +215,30 @@
                         <div class="timeline">
                           <!-- Experience 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Frontend-developer</h4>
-                            <span class="item-period">Dec 2012 - Current</span>
-                            <span class="item-small">Web Agency</span>
+                            <h4 class="item-title">Analista de Sistemas Jr</h4>
+                            <span class="item-period">Set 2021 - Presente</span>
+                            <span class="item-small">Estadão</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Web Designer</h4>
-                            <span class="item-period">Dec 2011 - Nov 2012</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Cientista de Dados</h4>
+                            <span class="item-period">Abr 2020 - Present</span>
+                            <span class="item-small">Projeto Pessoal</span>
+                            <p class="item-description">Análises estatísticas descritivas, Análise de Componentes Principais (PCA), Análise de Agrupamento (Cluster),
+                            bem como elaboração e interpretação de gráficos.</p>
                           </div>
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
-                          <div class="timeline-item">
+                          <!-- <div class="timeline-item">
                             <h4 class="item-title">Graphic Designer</h4>
                             <span class="item-period">Jan 2010 - Dec 2011</span>
                             <span class="item-small">Apple Inc.</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
+                          </div> -->
                           <!-- / Experience 3 -->
                         </div>
                       </div>
