Inserir informaçao em exp Profissional do Estadao

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <div class="sp-subtitle">Geólogo, MSc</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Analista de dados (nas horas vagas)</div>
+                            <div class="sp-subtitle">Cientista de dados (nas horas vagas)</div>
                           </div>
                         </div>
                       </div>
@@ -218,7 +218,19 @@
                             <h4 class="item-title">Analista de Sistemas Jr</h4>
                             <span class="item-period">Set 2021 - Presente</span>
                             <span class="item-small">Estadão</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <p class="item-description">
+
+                              Atualmente trabalho em uma equipe multidisciplinar, provendo soluções aos principais sistemas do Estadão.
+                              <br><br>
+                              <strong>Tecnologias e ferramentas:</strong> Perl, PHP, HTML, CSS, JavaScript, MySQL, VS Code, Linux Shell.
+                             <br><br>
+                              <strong>Principais atividades:</strong> 
+                              <br>
+                              - Suporte a clientes internos (ambiente jornalístico), bem como a clientes externos (setor de mídia e financeiro);<br>
+                              - Soluções ETL para entrega de material jornalístico e dados financeiros;<br>
+                              - Extração de métricas de audiência.
+
+                            </p>
                           </div>
                           <!-- / Experience 1 -->
 
