Finalizado a Educacao e Experiencia Profissional

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <h4 class="item-title">Análise e Desenvolvimento de Sistemas</h4>
                             <span class="item-period">2023</span>
                             <span class="item-small">Centro Universitário UniFBV</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <p class="item-description"></p>
                           </div>
                           <!-- / Education 1 -->
 
@@ -181,7 +181,9 @@
                             <h4 class="item-title">Desenvolvedor Full Stack</h4>
                             <span class="item-period">2021</span>
                             <span class="item-small">Gama Academy</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <p class="item-description">
+                              Aplicação de metodologia ágeis e uso das tecnologias: HTML, CSS, JavaScript, React e NodeJs.
+                            </p>
                           </div>
                           <!-- / Education 2 -->
 
@@ -190,7 +192,9 @@
                             <h4 class="item-title">Pós-Graduação em Geociências</h4>
                             <span class="item-period">2021</span>
                             <span class="item-small">Universidade Federal de Pernambuco</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <p class="item-description">
+                              Título da Dissertação: Avaliação dos Níveis de Concentração de Metais Pesados em Sedimentos Superficiais do rio Capibaribe.
+                            </p>
                           </div>
                           <!-- / Education 3 -->
 
@@ -198,8 +202,10 @@
                           <div class="timeline-item">
                             <h4 class="item-title">Geologia</h4>
                             <span class="item-period">2018</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <span class="item-small">Universidade Federal de Pernambuco</span>
+                            <p class="item-description">
+                              Título da Monografia: Mapeamento Geológico (1:50.000) da Borda Sul do Gráben do Cupe, Bacia Pernambuco, NE do Brasil.
+                            </p>
                           </div>
                           <!-- / Education 4 -->
                         </div>
