--- a/index.html
+++ b/index.html
@@ -263,7 +263,9 @@
                     </div>
                   </div>
 
-                  <div class="row">
+                      <!-- Início da quantificação das habilidades (Soft e Hard Skills) -->
+
+                  <!-- <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
@@ -293,7 +295,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Coding <span>Skills</span></h3>
+                          <h3><span>Hard</span> Skills</h3>
                         </div>
 
                         <div class="skills-info">
@@ -315,7 +317,9 @@
                         
                       </div>
                     </div>
-                  </div>
+                  </div> -->
+
+                    <!-- Fim da quantificação das habilidades (Soft e Hard Skills) -->
 
                   <!-- Download Resume Button -->
                   <div class="row">
