Inserir as tecnologias FrontEnd

--- a/index.html
+++ b/index.html
@@ -349,19 +349,19 @@
           </section>
           <!-- End of Resume Subpage -->
 
-
+          <!-- Colocarei as tecnologias conhecidas -->
           <!-- Services Subpage -->
           <section class="pt-page" data-id="services">
             <div class="section-inner custom-page-content">
               <div class="page-header color-1">
-                <h2>Serviços Prestados</h2>
+                <h2>Tecnologias Conhecidas</h2>
               </div>
               <div class="page-content">
                 <!-- My Services -->
                 <div class="row">
                   <div class="col-sm-12 col-md-12">
                     <div class="block-title">
-                      <h3>Sou <span>boa em...</span></h3>
+                      <h3><span>Front</span> End</h3>
                     </div>
                   </div>
 
@@ -370,10 +370,10 @@
                       <div class="service-info">
                         <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                         <div class="service-image">
-                          <img src="images/service/web_design_icon.png" alt="Responsive Design" class="mCS_img_loaded">
+                          <img src="./images/tecnologia/javaScript.svg" alt="Responsive Design" class="mCS_img_loaded">
                         </div>
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                        <h4>JavaScript</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
                       </div>
                     </div>
                   </div>
@@ -382,10 +382,10 @@
                     <div class="service-block">
                       <div class="service-info">
                         <div class="service-image">
-                          <img src="images/service/photography_icon.png" alt="Photography" class="mCS_img_loaded">
+                          <img src="./images/tecnologia/typeScript.svg" alt="Photography" class="mCS_img_loaded">
                         </div>
-                        <h4>Photography</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                        <h4>TypeScript</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
                       </div>
                     </div>
                   </div>
@@ -394,10 +394,10 @@
                     <div class="service-block">
                       <div class="service-info">
                         <div class="service-image">
-                          <img src="images/service/creativity_icon.png" alt="Creativity" class="mCS_img_loaded">
+                          <img src="./images/tecnologia/css3.svg" alt="Creativity" class="mCS_img_loaded">
                         </div>
-                        <h4>Management</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                        <h4>CSS</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
                       </div>
                     </div>
                   </div>
@@ -406,10 +406,10 @@
                     <div class="service-block">
                       <div class="service-info">
                         <div class="service-image">
-                          <img src="images/service/advetising_icon.png" alt="Advetising" class="mCS_img_loaded">
+                          <img src="./images/tecnologia/html5.svg" alt="Advetising" class="mCS_img_loaded">
                         </div>
-                        <h4>Advertising</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                        <h4>HTML</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
                       </div>
                     </div>
                   </div>
