Finalizei a parte de BackEnd

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
           <!-- End of Resume Subpage -->
 
           <!-- Colocarei as tecnologias conhecidas -->
+          <!-- Inicio FrontEnd-->
           <!-- Services Subpage -->
           <section class="pt-page" data-id="services">
             <div class="section-inner custom-page-content">
@@ -414,7 +415,92 @@
                     </div>
                   </div>
                 </div>
+                <!-- Fim frontEnd-->
                 <!-- End of My Services -->
+                
+                <!-- Inicio backEnd-->
+                <!-- My Services -->
+                <div class="row">
+                  <div class="col-sm-12 col-md-12">
+                    <div class="block-title">
+                      <h3><span>Back</span> End</h3>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-6 col-md-3">
+                    <div class="service-block">
+                      <div class="service-info">
+                        <!--<i class="service-icon fa fa-shopping-cart"></i>-->
+                        <div class="service-image">
+                          <img src="./images/tecnologia/backEnd/php.svg" class="mCS_img_loaded">
+                        </div>
+                        <h4>PHP</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-6 col-md-3">
+                    <div class="service-block">
+                      <div class="service-info">
+                        <div class="service-image">
+                          <img src="./images/tecnologia/backEnd/java.svg" class="mCS_img_loaded">
+                        </div>
+                        <h4>Java</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-6 col-md-3">
+                    <div class="service-block">
+                      <div class="service-info">
+                        <div class="service-image">
+                          <img src="./images/tecnologia/backEnd/perl.svg" class="mCS_img_loaded">
+                        </div>
+                        <h4>Perl</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-6 col-md-3">
+                    <div class="service-block">
+                      <div class="service-info">
+                        <div class="service-image">
+                          <img src="./images/tecnologia/backEnd/r.svg" class="mCS_img_loaded">
+                        </div>
+                        <h4>R</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Fim backEnd-->
+                <!-- End of My Services2 -->
+
+                <!-- Banco de dados -->
+
+                <div class="row">
+                  <div class="col-sm-12 col-md-12">
+                    <div class="block-title">
+                      <h3><span>Banco</span> de Dados</h3>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-6 col-md-3">
+                    <div class="service-block">
+                      <div class="service-info">
+                        <!--<i class="service-icon fa fa-shopping-cart"></i>-->
+                        <div class="service-image">
+                          <img src="./images/tecnologia/banco de dados/mySQL.svg" class="mCS_img_loaded">
+                        </div>
+                        <h4>MySQL</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
+                      </div>
+                    </div>
+                  </div>
+
 
                 <!-- Clients -->
                 <div class="row">
