Inserir a parte de banco de dados

--- a/index.html
+++ b/index.html
@@ -501,6 +501,32 @@
                     </div>
                   </div>
 
+                  <div class="col-sm-6 col-md-3">
+                    <div class="service-block">
+                      <div class="service-info">
+                        <!--<i class="service-icon fa fa-shopping-cart"></i>-->
+                        <div class="service-image">
+                          <img src="./images/tecnologia/banco de dados/postgreSQL.svg" class="mCS_img_loaded">
+                        </div>
+                        <h4>PostgreSQL</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-6 col-md-3">
+                    <div class="service-block">
+                      <div class="service-info">
+                        <!--<i class="service-icon fa fa-shopping-cart"></i>-->
+                        <div class="service-image">
+                          <img src="./images/tecnologia/banco de dados/mongoDB.svg" class="mCS_img_loaded">
+                        </div>
+                        <h4>MongoDB</h4>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
+                      </div>
+                    </div>
+                  </div>
+
 
                 <!-- Clients -->
                 <div class="row">
