Renomeado uma aba para Tecnologias

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="pt-trigger" href="index.html#resume">Currículo</a>
             </li>
             <li>
-              <a class="pt-trigger" href="index.html#services">Serviços</a>
+              <a class="pt-trigger" href="index.html#services">Tecnologias</a>
             </li>
             <li>
               <a class="pt-trigger" href="index.html#portfolio">Portfólio</a>
