--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                 <div class="row">
                   <div class="col-sm-12 col-md-12">
                     <div class="block-title">
-                      <h3><span>Banco</span> de Dados</h3>
+                      <h3>Banco de Dados<span> (SQL e NoSQL)</span></h3>
                     </div>
                   </div>
 
