Inserido os frameworks

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                         <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                           <div class="service-image">
-                            <img src="#" class="mCS_img_loaded">
+                            <img src="./images/tecnologia/framework/bootstrap.svg" class="mCS_img_loaded">
                           </div>
                           <h4>Bootstrap</h4>
                           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
@@ -550,25 +550,13 @@
                       </div>
                     </div>
   
+                     
                     <div class="col-sm-6 col-md-3">
                       <div class="service-block">
                         <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                           <div class="service-image">
-                            <img src="#" class="mCS_img_loaded">
-                          </div>
-                          <h4>Angular</h4>
-                          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
-                        </div>
-                      </div>
-                    </div>
-  
-                    <div class="col-sm-6 col-md-3">
-                      <div class="service-block">
-                        <div class="service-info">
-                          <!--<i class="service-icon fa fa-shopping-cart"></i>-->
-                          <div class="service-image">
-                            <img src="#" class="mCS_img_loaded">
+                            <img src="./images/tecnologia/framework/react.svg" class="mCS_img_loaded">
                           </div>
                           <h4>React</h4>
                           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
