--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                           <div class="service-info">
                             <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                             <div class="service-image">
-                              <img src="#" class="mCS_img_loaded">
+                              <img src="./images/tecnologia/devops/git.svg" class="mCS_img_loaded">
                             </div>
                             <h4>Git</h4>
                             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
@@ -593,7 +593,7 @@
                           <div class="service-info">
                             <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                             <div class="service-image">
-                              <img src="#" class="mCS_img_loaded">
+                              <img src="./images/tecnologia/devops/github.svg" class="mCS_img_loaded">
                             </div>
                             <h4>GitHub</h4>
                             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
@@ -606,7 +606,7 @@
                           <div class="service-info">
                             <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                             <div class="service-image">
-                              <img src="#" class="mCS_img_loaded">
+                              <img src="./images/tecnologia/devops/vscode.svg" class="mCS_img_loaded">
                             </div>
                             <h4>Visual Studio Code</h4>
                             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p> -->
